// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Feedback > Render > renders "empty" type (default) 1`] = `
<div>
  <div
    class="mx-auto text-center w-full max-w-150 p-4"
    data-testid="Feedback"
  >
    <div
      class="flex items-center justify-center"
    >
      <svg
        class="size-16 text-muted"
        fill="currentColor"
        height="1em"
        viewBox="0 0 256 256"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M88,180a12,12,0,1,1-12-12A12,12,0,0,1,88,180Zm152-23.81V208a16,16,0,0,1-16,16H76a46.36,46.36,0,0,1-7.94-.68,44,44,0,0,1-35.43-50.95l25-143.13a15.94,15.94,0,0,1,18.47-13L130.84,26a16,16,0,0,1,12.92,18.52l-12.08,69L199.49,89a16,16,0,0,1,20.45,9.52L239,150.69A18.35,18.35,0,0,1,240,156.19ZM103,184.87,128,41.74,73.46,32l-25,143.1A28,28,0,0,0,70.9,207.57,27.29,27.29,0,0,0,91.46,203,27.84,27.84,0,0,0,103,184.87ZM116.78,195,224,156.11,204.92,104,128.5,131.7l-9.78,55.92A44.63,44.63,0,0,1,116.78,195ZM224,173.12,127.74,208H224Z"
        />
      </svg>
    </div>
    <div
      class="mt-4"
    >
      <h2
        class="font-semibold text-foreground text-xl"
      >
        Nothing here
      </h2>
      <p
        class="text-muted mt-1"
      >
        There are no items to display.
      </p>
    </div>
  </div>
</div>
`;

exports[`Feedback > Render > renders "error" type 1`] = `
<div>
  <div
    class="mx-auto text-center w-full max-w-150 p-4"
    data-testid="Feedback"
  >
    <div
      class="flex items-center justify-center"
    >
      <svg
        class="size-16 text-muted"
        fill="currentColor"
        height="1em"
        viewBox="0 0 256 256"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm-8-80V80a8,8,0,0,1,16,0v56a8,8,0,0,1-16,0Zm20,36a12,12,0,1,1-12-12A12,12,0,0,1,140,172Z"
        />
      </svg>
    </div>
    <div
      class="mt-4"
    >
      <h2
        class="font-semibold text-foreground text-xl"
      >
        Something went wrong
      </h2>
      <p
        class="text-muted mt-1"
      >
        An unexpected error has occurred. Try reloading the page.
      </p>
    </div>
  </div>
</div>
`;

exports[`Feedback > Render > renders "forbidden" type 1`] = `
<div>
  <div
    class="mx-auto text-center w-full max-w-150 p-4"
    data-testid="Feedback"
  >
    <div
      class="flex items-center justify-center"
    >
      <svg
        class="size-16 text-muted"
        fill="currentColor"
        height="1em"
        viewBox="0 0 256 256"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm88,104a87.56,87.56,0,0,1-20.41,56.28L71.72,60.4A88,88,0,0,1,216,128ZM40,128A87.56,87.56,0,0,1,60.41,71.72L184.28,195.6A88,88,0,0,1,40,128Z"
        />
      </svg>
    </div>
    <div
      class="mt-4"
    >
      <h2
        class="font-semibold text-foreground text-xl"
      >
        Access denied
      </h2>
      <p
        class="text-muted mt-1"
      >
        You don't have permission to access this resource.
      </p>
    </div>
  </div>
</div>
`;

exports[`Feedback > Render > renders "no-results" type 1`] = `
<div>
  <div
    class="mx-auto text-center w-full max-w-150 p-4"
    data-testid="Feedback"
  >
    <div
      class="flex items-center justify-center"
    >
      <svg
        class="size-16 text-muted"
        fill="currentColor"
        height="1em"
        viewBox="0 0 256 256"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M229.66,218.34l-50.07-50.06a88.11,88.11,0,1,0-11.31,11.31l50.06,50.07a8,8,0,0,0,11.32-11.32ZM40,112a72,72,0,1,1,72,72A72.08,72.08,0,0,1,40,112Z"
        />
      </svg>
    </div>
    <div
      class="mt-4"
    >
      <h2
        class="font-semibold text-foreground text-xl"
      >
        No search results
      </h2>
      <p
        class="text-muted mt-1"
      >
        Your search didn't match anything.
      </p>
    </div>
  </div>
</div>
`;

exports[`Feedback > Render > renders "not-found" type 1`] = `
<div>
  <div
    class="mx-auto text-center w-full max-w-150 p-4"
    data-testid="Feedback"
  >
    <div
      class="flex items-center justify-center"
    >
      <svg
        class="size-16 text-muted"
        fill="currentColor"
        height="1em"
        viewBox="0 0 256 256"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216ZM80,108a12,12,0,1,1,12,12A12,12,0,0,1,80,108Zm96,0a12,12,0,1,1-12-12A12,12,0,0,1,176,108Zm-1.08,64a8,8,0,1,1-13.84,8c-7.47-12.91-19.21-20-33.08-20s-25.61,7.1-33.08,20a8,8,0,1,1-13.84-8c10.29-17.79,27.39-28,46.92-28S164.63,154.2,174.92,172Z"
        />
      </svg>
    </div>
    <div
      class="mt-4"
    >
      <h2
        class="font-semibold text-foreground text-xl"
      >
        Page not found
      </h2>
      <p
        class="text-muted mt-1"
      >
        We are sorry, but the page you requested doesn't exist.
      </p>
    </div>
  </div>
</div>
`;

exports[`Feedback > Render > renders "success" type 1`] = `
<div>
  <div
    class="mx-auto text-center w-full max-w-150 p-4"
    data-testid="Feedback"
  >
    <div
      class="flex items-center justify-center"
    >
      <svg
        class="size-16 text-muted"
        fill="currentColor"
        height="1em"
        viewBox="0 0 256 256"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216ZM80,108a12,12,0,1,1,12,12A12,12,0,0,1,80,108Zm96,0a12,12,0,1,1-12-12A12,12,0,0,1,176,108Zm-1.08,64a8,8,0,1,1-13.84,8c-7.47-12.91-19.21-20-33.08-20s-25.61,7.1-33.08,20a8,8,0,1,1-13.84-8c10.29-17.79,27.39-28,46.92-28S164.63,154.2,174.92,172Z"
        />
      </svg>
    </div>
    <div
      class="mt-4"
    >
      <h2
        class="font-semibold text-foreground text-xl"
      >
        Page not found
      </h2>
      <p
        class="text-muted mt-1"
      >
        We are sorry, but the page you requested doesn't exist.
      </p>
    </div>
  </div>
</div>
`;

exports[`Feedback > Render > renders large size 1`] = `
<div>
  <div
    class="mx-auto text-center w-full max-w-150 p-4"
    data-testid="Feedback"
  >
    <div
      class="flex items-center justify-center"
    >
      <svg
        class="size-24 text-muted"
        fill="currentColor"
        height="1em"
        viewBox="0 0 256 256"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M88,180a12,12,0,1,1-12-12A12,12,0,0,1,88,180Zm152-23.81V208a16,16,0,0,1-16,16H76a46.36,46.36,0,0,1-7.94-.68,44,44,0,0,1-35.43-50.95l25-143.13a15.94,15.94,0,0,1,18.47-13L130.84,26a16,16,0,0,1,12.92,18.52l-12.08,69L199.49,89a16,16,0,0,1,20.45,9.52L239,150.69A18.35,18.35,0,0,1,240,156.19ZM103,184.87,128,41.74,73.46,32l-25,143.1A28,28,0,0,0,70.9,207.57,27.29,27.29,0,0,0,91.46,203,27.84,27.84,0,0,0,103,184.87ZM116.78,195,224,156.11,204.92,104,128.5,131.7l-9.78,55.92A44.63,44.63,0,0,1,116.78,195ZM224,173.12,127.74,208H224Z"
        />
      </svg>
    </div>
    <div
      class="mt-4"
    >
      <h2
        class="font-semibold text-foreground text-2xl"
      >
        Nothing here
      </h2>
      <p
        class="text-muted mt-1"
      >
        There are no items to display.
      </p>
    </div>
  </div>
</div>
`;

exports[`Feedback > Render > renders small size 1`] = `
<div>
  <div
    class="mx-auto text-center w-full max-w-150 p-4"
    data-testid="Feedback"
  >
    <div
      class="flex items-center justify-center"
    >
      <svg
        class="size-12 text-muted"
        fill="currentColor"
        height="1em"
        viewBox="0 0 256 256"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M88,180a12,12,0,1,1-12-12A12,12,0,0,1,88,180Zm152-23.81V208a16,16,0,0,1-16,16H76a46.36,46.36,0,0,1-7.94-.68,44,44,0,0,1-35.43-50.95l25-143.13a15.94,15.94,0,0,1,18.47-13L130.84,26a16,16,0,0,1,12.92,18.52l-12.08,69L199.49,89a16,16,0,0,1,20.45,9.52L239,150.69A18.35,18.35,0,0,1,240,156.19ZM103,184.87,128,41.74,73.46,32l-25,143.1A28,28,0,0,0,70.9,207.57,27.29,27.29,0,0,0,91.46,203,27.84,27.84,0,0,0,103,184.87ZM116.78,195,224,156.11,204.92,104,128.5,131.7l-9.78,55.92A44.63,44.63,0,0,1,116.78,195ZM224,173.12,127.74,208H224Z"
        />
      </svg>
    </div>
    <div
      class="mt-4"
    >
      <h2
        class="font-semibold text-foreground text-lg"
      >
        Nothing here
      </h2>
      <p
        class="text-muted mt-1"
      >
        There are no items to display.
      </p>
    </div>
  </div>
</div>
`;

exports[`Feedback > Render > renders with children 1`] = `
<div>
  <div
    class="mx-auto text-center w-full max-w-150 p-4"
    data-testid="Feedback"
  >
    <div
      class="flex items-center justify-center"
    >
      <svg
        class="size-16 text-muted"
        fill="currentColor"
        height="1em"
        viewBox="0 0 256 256"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M88,180a12,12,0,1,1-12-12A12,12,0,0,1,88,180Zm152-23.81V208a16,16,0,0,1-16,16H76a46.36,46.36,0,0,1-7.94-.68,44,44,0,0,1-35.43-50.95l25-143.13a15.94,15.94,0,0,1,18.47-13L130.84,26a16,16,0,0,1,12.92,18.52l-12.08,69L199.49,89a16,16,0,0,1,20.45,9.52L239,150.69A18.35,18.35,0,0,1,240,156.19ZM103,184.87,128,41.74,73.46,32l-25,143.1A28,28,0,0,0,70.9,207.57,27.29,27.29,0,0,0,91.46,203,27.84,27.84,0,0,0,103,184.87ZM116.78,195,224,156.11,204.92,104,128.5,131.7l-9.78,55.92A44.63,44.63,0,0,1,116.78,195ZM224,173.12,127.74,208H224Z"
        />
      </svg>
    </div>
    <div
      class="mt-4"
    >
      <h2
        class="font-semibold text-foreground text-xl"
      >
        Nothing here
      </h2>
      <p
        class="text-muted mt-1"
      >
        There are no items to display.
      </p>
    </div>
    <div
      class="mt-6"
    >
      <button
        type="button"
      >
        Action Button
      </button>
    </div>
  </div>
</div>
`;

exports[`Feedback > Render > renders with custom content 1`] = `
<div>
  <div
    class="mx-auto text-center w-full max-w-150 p-4"
    data-testid="Feedback"
  >
    <div
      class="flex items-center justify-center"
    >
      <span
        data-testid="custom-icon"
      >
        Custom Icon
      </span>
    </div>
    <div
      class="mt-4"
    >
      <h2
        class="font-semibold text-foreground text-xl"
      >
        Custom Title
      </h2>
      <p
        class="text-muted mt-1"
      >
        Custom description text
      </p>
    </div>
  </div>
</div>
`;

exports[`Feedback > Render > renders with hidden icon 1`] = `
<div>
  <div
    class="mx-auto text-center w-full max-w-150 p-4"
    data-testid="Feedback"
  >
    <div
      class=""
    >
      <h2
        class="font-semibold text-foreground text-xl"
      >
        Something went wrong
      </h2>
      <p
        class="text-muted mt-1"
      >
        An unexpected error has occurred. Try reloading the page.
      </p>
    </div>
  </div>
</div>
`;
